--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "forum": "https://discourse.zendframework.com/c/questions/components"
     },
     "require": {
-        "php": "^5.6 || ^7.0",
+        "php": "^5.6 || ^7.0 || ^8.0",
         "container-interop/container-interop": "^1.2",
         "psr/container": "^1.0",
         "zendframework/zend-stdlib": "^3.2.1"
